# langchain-memvid

./: BENCHMARKING.md  IPYTHON_EXTENSION.md  LICENSE  LICENSES.md  README.md  TESTING.md  pyproject.toml
.github/workflows/: gh-pages.yml  release.yml
docs/: conf.py  index.rst  installation.rst
docs/api/: config.rst  encoder.rst  exceptions.rst  index.rst  index_module.rst  retriever.rst  vectorstore.rst
docs/api/utils/: index.rst  metadata.rst  progress.rst
docs/api/video/: codecs.rst  default.rst  ffmpeg.rst  index.rst
docs/examples/: advanced_usage.rst  basic_usage.rst  index.rst  notebooks.rst
examples/: advanced.ipynb  advanced.py  granular.ipynb  quickstart.ipynb  quickstart.py  vectorstore.ipynb
licenses/: ffmpeg.txt
scripts/: fetch_licenses.py  fetch_licenses.sh
src/: ipykernel_memvid_extension.py
src/langchain_memvid/: __init__.py  config.py  encoder.py  exceptions.py  index.py  logging.py  retriever.py  types.py  utils.py  vectorstore.py  video.py
src/langchain_memvid/utils/: __init__.py  metadata.py  progress.py
src/langchain_memvid/video/: __init__.py  codecs.py  default.py  ffmpeg.py
tests/: conftest.py  test_encoder.py  test_ffmpeg.py  test_index.py  test_ipykernel_memvid_extension.py  test_logging.py  test_retriever.py  test_utils_metadata.py  test_utils_progress.py  test_vectorstore.py  test_vectorstore_benchmark.py  test_video.py  test_video_ffmpeg.py
