[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-memvid"
version = "0.0.0"
description = "LangChain implementation for MemVid (video-based vector storage)"
requires-python = ">=3.12"
authors = [
    { name="Dawid Ciepiela", email="71898979+sarumaj@users.noreply.github.com" }
]
readme = "README.md"
license = { text = "BSD-3-Clause" }
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent"
]
dependencies = [
    "faiss-cpu==1.11.0",
    "langchain-core==0.3.65",
    "nest_asyncio==1.6.0",
    "qrcode[pil]==8.2",
    "opencv-contrib-python==4.11.0.86",
    "opencv-python==4.11.0.86",
    "orjson==3.10.18",
    "pydantic==2.11.7",
    "tqdm==4.67.1"
]

[project.optional-dependencies]
test = [
    "pytest==8.0.0",
    "pytest-asyncio==0.23.5"
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
    "-v",
    "--asyncio-mode=auto"
]
filterwarnings = [
    "ignore:numpy.core._multiarray_umath is deprecated:DeprecationWarning:faiss.loader",
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning:importlib._bootstrap",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning:importlib._bootstrap",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning:importlib._bootstrap"
]
